# suetolog_bot

./: .dockerignore  .gitignore  Artur.txt  Artur_mini.txt  Dockerfile  GEMINI.md  README.md  SaluteSpeech.py  davinci.txt.txt  docker-compose.yml  dr.json  functions_file.py  kinophiles.db  main.py  pyproject.toml  requirements.txt  yandex_services.py
.github/workflows/: ci.yml
kinophiles/: db.py  handlers.py  keyboards.py  kinophiles.db  states.py
tests/: test_SaluteSpeech.py  test_functions_file.py  test_main.py  test_yandex_services.py
