[project]
name = "suetolog-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==23.2.1",
    "aiogram==3.2.0",
    "aiohttp==3.9.1",
    "aiosignal==1.3.1",
    "annotated-types==0.6.0",
    "apscheduler==3.10.4",
    "async-timeout==4.0.3",
    "attrs==23.1.0",
    "cachetools==5.3.2",
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "coverage==7.6.12",
    "dotenv==0.9.9",
    "exceptiongroup==1.2.2",
    "frozenlist==1.4.1",
    "google-auth==2.25.2",
    "google-auth-oauthlib==1.2.0",
    "gspread==5.12.3",
    "idna==3.6",
    "iniconfig==2.0.0",
    "loguru==0.7.3",
    "magic-filter==1.0.12",
    "multidict==6.0.4",
    "oauthlib==3.2.2",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pyasn1==0.5.1",
    "pyasn1-modules==0.3.0",
    "pydantic==2.5.2",
    "pydantic-core==2.14.5",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.0.0",
    "python-dotenv==1.0.1",
    "pytz==2023.3.post1",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "rsa==4.9",
    "six==1.16.0",
    "tomli==2.2.1",
    "typing-extensions==4.9.0",
    "tzdata==2023.3",
    "tzlocal==5.2",
    "urllib3==2.1.0",
    "win32-setctime==1.2.0",
    "yadisk==2.0.0",
    "yarl==1.9.4",
]
