[project]
name = "suetolog-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==23.2.1",
    "aiogram==3.2.0",
    "aiohttp==3.9.1",
    "aiosignal==1.3.1",
    "annotated-types==0.6.0",
    "apscheduler==3.10.4",
    "async-timeout==4.0.3",
    "attrs==23.1.0",
    "cachetools==5.3.2",
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "coverage==7.6.12",
    "dotenv==0.9.9",
    "exceptiongroup==1.2.2",
    "frozenlist==1.4.1",
    "google-auth==2.25.2",
    "google-auth-oauthlib==1.2.0",
    "gspread==5.12.3",
    "idna==3.6",
    "iniconfig==2.0.0",
    "loguru==0.7.3",
    "magic-filter==1.0.12",
    "multidict==6.0.4",
    "mypy>=1.15.0",
    "oauthlib==3.2.2",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pyasn1==0.5.1",
    "pyasn1-modules==0.3.0",
    "pydantic==2.5.2",
    "pydantic-core==2.14.5",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.0.0",
    "python-dotenv==1.0.1",
    "pytz==2023.3.post1",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "rsa==4.9",
    "ruff>=0.11.3",
    "six==1.16.0",
    "tenacity>=9.1.2",
    "tomli==2.2.1",
    "types-aiofiles>=24.1.0.20250326",
    "typing-extensions==4.9.0",
    "tzdata==2023.3",
    "tzlocal==5.2",
    "urllib3==2.1.0",
    "win32-setctime==1.2.0",
    "yadisk==2.0.0",
    "yarl==1.9.4",
]

[tool.ruff]
target-version = "py310"
fix = true
[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
    ".github",
    "ball",
    ".dockerignore",
    ".gitignore"
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["suetolog_bot"]

[tool.mypy]
mypy_path = "suetolog_bot"
strict = true  # Включает строгую проверку типов
ignore_missing_imports = true  # Не проверять сторонние библиотеки
warn_unused_ignores = true  # Предупреждать об игнорируемых аннотациях
warn_redundant_casts = true  # Предупреждать о ненужных `cast()`
disallow_untyped_defs = true  # Запрещает функции без аннотации типов

[mypy-paswords]
disable_error_code = ["import-untyped", "module-name"]

[tool.pytest.ini_options]
asyncio_mode = "auto"  # Позволяет тестировать асинхронные функции
testpaths = ["tests"]  # Указываем, где искать тесты
python_files = ["test_*.py"]  # Указываем, какие файлы считаются тестами
python_classes = ["Test*"]  # Классы, которые pytest воспринимает как тестовые
python_functions = ["test_*"]  # Функции, которые pytest будет запускать
addopts = "--strict-markers --tb=short --disable-warnings"  # Убираем лишние ворнинги

markers = [
    "slow: помечает тесты, которые работают медленно",
    "db: тесты, связанные с базой данных",
    "api: тесты, проверяющие API"
]

